# Scorpion

./: .gitmodules  CMakeLists.txt  README.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/utils/: config.c  config.h  hardware.cpp  hardware.h
